[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "designpatterns"
dynamic = ["version"]
authors = [{name = 'Volleyball Player', email="volleyball@player.com"},]
description = "A Python package with description and examples of Gang of Four design patterns."
dependencies = ["Click"]

[project.scripts]
designpattern = "designpatterns.__main__:main"

[tool.setuptools.package-data]

[project.optional-dependencies]
dev = ["pylint",
    "toml"
]
docs = ["Sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme>=2.0.0" #error with version 0.5.1
]
test = ["pytest",
    "pytest-cov",
    "pytest_mock"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --color=yes"

[tool.coverage.run]

[tool.pylint.format]