[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "designpatterns"
dynamic = ["version"]
authors = [{name = 'Volleyball Player', email="volleyball@player.com"},]
description = "A Python package with description and examples of Gang of Four design patterns."
dependencies = ["Click"]

[project.scripts]
creationalpatterns = "designpatterns.cli.creational_patterns:cli"
structuralpatterns = "designpatterns.cli.structural_patterns:cli"

[tool.setuptools.package-data]

[project.optional-dependencies]
dev = ["pylint",
    "toml",
    "ruff"
]
docs = ["Sphinx",
    "sphinx-click",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme>=2.0.0" #error with version 0.5.1
]
test = ["pytest",
    "pytest-cov",
    "pytest_mock",
    "pylint-pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --color=yes"

[tool.coverage.run]

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # (missing-module-docstring)
    "W1203", # (logging-fstring-interpolation)
    "W0311", # (Bad indentation.) Overlaps with Ruff
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true