[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "designpatterns"
dynamic = ["version"]
authors = [{name = 'Volleyball Player', email="volleyball@player.com"},]
description = "A Python package with description and examples of Gang of Four design patterns."
dependencies = ["Click"]

[tool.setuptools.dynamic]
version = {attr = "designpatterns.__version__"}

[project.scripts]
run-creational-pattern = "designpatterns.cli.run_creational_patterns:cli"
run-structural-pattern = "designpatterns.cli.run_structural_patterns:cli"
run-behavioral-pattern = "designpatterns.cli.run_behavioral_patterns:cli"

[tool.setuptools.package-data]

[project.optional-dependencies]
dev = ["toml",
    "ruff"
]
docs = ["Sphinx",
    "sphinx-click",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme>=2.0.0" #error with version 0.5.1
]
test = ["pytest",
    "pytest-cov",
    "pytest_mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --color=yes"

[tool.coverage.run]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # annotations
    "ANN",
    # documenation
    "D",
    # pep8-naming
    "N",
    # comprehensions
    "C4",
    # datetime
    "DTZ",
    # pyi
    "PYI",
    # pytest
    "PT",
    # return
    "RET",
    # private member accessed
    "SLF",
    # unused arguments
    "ARG",
    # paths
    "PTH",
    # todo
    "TD",
    # fixme
    "FIX",
    # commment out code
    "ERA",
    # pandas
    "PD",
    # error
    "E",
    # try
    "TRY",
    # numpy
    "NPY",
    # refurb
    "FURB"
]
ignore = [ 
    # undocumented-public-module 
    "D100",
    # Missing docstring in public package
    "D104",
    # Missing docstring in `__init__`
    "D107",
    # Docstring should be indented with spaces, not tabs
    "D206",
    # no-blank-line-before-class
    "D211",
    # multi-line-summary-second-line
    "D213",
    # one-blank-line-before-class
    "D203",
    # Missing type annotation for `self`
    "ANN101"
     ]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
force-wrap-aliases = true
combine-as-imports = true